#***************************************************************************

todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################

opsi-winst/opsi-script (4.11.6.12) stable; urgency=low

  * osjson: escape chars in jsonAsArrayToStringList

-- Detlef Oertel <d.oertel@uib.de>  Tue, 03 Jan 2017:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.11) stable; urgency=low

  * source migrated from svn to git and direcories restructured
  * compiled with Lazarus 1.6.2
  * osparser: doOpsiServiceCall: new Parametzer opsiclientd-once (=tscOpsiclientdOnce)
     resets local_opsidata after servicecall
  * osparser: CreateAndProcessScript: resets local_opsidata before script
  * osparser: doAktionen: Statement: 'opsiservicecall /preloginservice' (without sektion) allowed
  * oswebservice: sendLog: shrinking temporary disabled until size can be asked via service call
  * osfuncwin: StrSIDToName: do not try empty string
  * osparser: use 'on e: exception do' in exception handling
  * osfuncwin2: updateenvironment: use lazarus sendmessage
  * osregistry: WriteEntry: unicode / utf8 Support
  * osparser: Resourcestring for translation: rsReadyToContinue
  * osparser: fileactionsmain: GetString with true
  * osfunc: TPatchList.FindFirstItemWith: more logging
  * osinteracticegui: message for not working logview
  * osparser: symlink: check via cmd.exe after create symlink
  * osparser: removed cmd.exe call from fileexists%
  * osparser: success or failed after 'script finished' in log footer
  * osparser: dosbatch: retry on erroer 19 (WRITE_PROTECT)
  * updateted lang (po) files
  * updated indy lib 10-rev5391
  * osparser: fix in getstring call chain
  * osfunc: fix in chmod error handling

-- Detlef Oertel <d.oertel@uib.de>  Tue, 06 Dec 2016:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.10) stable; urgency=low
